# sfora

./: .gitignore  README.md  binary_insertion_sort.py  index.html  layout_improvements_analysis.md  manim.cfg  pairwise_comparison_animation.py  preview.cfg  preview_animation.py  preview_layout_improvements.py  pyproject.toml  render_and_analyze.py  script.js  style.css  subagent_instructions.md  test-range-numbering.html  test-split-view.html  test-tabbed.html
js/: assignee-colors.js  csv-handler.js  debug.js  main.js  quarterly-status.js  sorting-engine.js  state.js  storage.js  ui-comparison.js  ui-quarterly.js  ui-renderer.js  ui-results.js  ui-setup.js  ui-tabs.js  ui-tasks.js
style/: base.css  components.css  quarterly.css  responsive.css  results.css  tabs.css
