[project]
name = "binary-insertion-sort"
version = "0.1.0"
description = "Manim animation for binary insertion sort"
authors = [
    {name = "kuleje"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "manim (>=0.19.0,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
